src/test/resources/semantic_errors/return_int_div_void.notc
void main() {
}

int fun() {
    return 676 / main();
}
